--- a/src/app/testcentre-register/testcentre-register.component.html
+++ b/src/app/testcentre-register/testcentre-register.component.html
@@ -11,7 +11,7 @@
       <mat-card-content>
         <mat-form-field class="input-field">
 
-          <input matInput required  type="text" name="centreName" value="Centrename" placeholder="Test Centre Name" ngModel #testCentreInput="ngModel">
+          <input matInput required  type="text" name="centreName" value="Centrename" placeholder="Test Centre Name" [ngModel] ='testcentre?.centreName' #testCentreInput="ngModel">
           <mat-error *ngIf="testCentreInput.invalid"> Please enter valid test centre name</mat-error>
         </mat-form-field>
 
