--- a/src/app/generate-report/generate-report.component.html
+++ b/src/app/generate-report/generate-report.component.html
@@ -57,6 +57,16 @@ fxLayoutGap.xs="0">
       </mat-dialog-actions>
       </mat-cell>
     </ng-container>
+    <ng-container matColumnDef="delete">
+      <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
+      <mat-cell *matCellDef="let element" >
+      <mat-dialog-actions>
+        <button mat-icon-button  (click)="onDeleteTest(element.id)"> 
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-dialog-actions>
+      </mat-cell>
+    </ng-container>
    <!-- <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row">
