--- a/src/app/testcentre/testcentre.component.html
+++ b/src/app/testcentre/testcentre.component.html
@@ -32,8 +32,8 @@
       </ng-container>
       <div    *ngFor="let name of testcentres" >
       <input matInput disabled value= "{{name.centreName}}" >
-      <a mat-raised-button color="primary" type="button"  >Edit</a>
-      <!-- <a mat-raised-button color="primary" type="button" [routerLink]= "['/edit',testcentres.id]" >Edit</a> -->
+    <!--   <a mat-raised-button color="primary" type="button"  >Edit</a>-->
+     <a mat-raised-button color="primary" type="button" [routerLink]= "['/edit',name.id]" >Edit</a>
     </div>
     </form>
    <!-- <mat-card-footer class="sign">
