--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,12 +8,21 @@
     <span class="menu-spacer"></span>
     <div fxShow="true" fxHide.lt-md ><!--fxHide.lt-md-->
       <!--  be hidden on both SM and XS screen sizes-->
+      <ng-container *ngIf= "!userIsAuthenticated">
       <a mat-raised-button class="btn-nav" color="primary" routerLink="/login">
         <mat-icon> enhanced_encryption </mat-icon>Login
       </a>
+    </ng-container>
+      <ng-container *ngIf= "!userIsAuthenticated">
       <a mat-raised-button class="btn-nav" color="primary" routerLink="/register">
         <mat-icon> perm_identity </mat-icon>Sign Up
       </a>
+    </ng-container>
+    <ng-container *ngIf= "userIsAuthenticated">
+      <a mat-raised-button class="btn-nav" color="primary" (click)="onLogout()">
+        <mat-icon > perm_identity </mat-icon> Logout
+      </a>
+    </ng-container>
     </div>
     <div fxShow="true" fxHide.gt-sm ><!--fxHide.lt-md-->
       <!--  be hidden on both SM and XS screen sizes-->
@@ -40,15 +49,21 @@
       <a class="nav-item" mat-list-item routerLink="/homepage" (click)="sidenav.toggle()">
           <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
       </a>
+      <ng-container *ngIf= "userIsAuthenticated">
       <a class="nav-item" mat-list-item routerLink="/testcentre" (click)="sidenav.toggle()">
           <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Register Test Centre</span>
       </a>
+    </ng-container>
+    <ng-container *ngIf= "userIsAuthenticated">
       <a class="nav-item" mat-list-item routerLink="/recordOfficer" (click)="sidenav.toggle()">
           <mat-icon>group_add</mat-icon><span class="nav-caption">Record Test Centre Officer</span>
       </a>
+    </ng-container>
+    <ng-container *ngIf= "userIsAuthenticated">
       <a class="nav-item" mat-list-item routerLink="/manageTestKit" (click)="sidenav.toggle()">
         <mat-icon>science</mat-icon><span class="nav-caption">Manage Test Kit Stock</span>
       </a>
+    </ng-container>
       <a class="nav-item" mat-list-item routerLink="/generateReport" (click)="sidenav.toggle()">
         <mat-icon>receipt_long</mat-icon><span class="nav-caption">View & Update Test List</span>
       </a>
