--- a/src/app/manage-testkit-list/manage-testkit-list.component.html
+++ b/src/app/manage-testkit-list/manage-testkit-list.component.html
@@ -9,7 +9,7 @@
    <!-- <p>Number of stock: {{testkit.stock}}</p>-->
     <mat-action-row>
       <span class="example-spacer"></span>
-      <button mat-button color="primary" [routerLink]= "['/edit', testkit.id]">EDIT</button>
+      <button mat-button color="primary" [routerLink]= "['/editKit', testkit.id]">EDIT</button>
       <button mat-button color="warn" (click)= "onDelete(testkit.id)" >DELETE</button>
     </mat-action-row>
 
