--- a/src/app/record-officer-list/record-officer-list.component.html
+++ b/src/app/record-officer-list/record-officer-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 
-<table mat-table *ngFor="let officer of officers" class="mat-elevation-z8">
+<table mat-table [dataSource]="officers" class="mat-elevation-z8"> class="mat-elevation-z8">
 
   <ng-container matColumnDef="userID">
     <th mat-header-cell *matHeaderCellDef> UserID</th>
@@ -9,7 +9,7 @@
   </ng-container>
   <ng-container matColumnDef="testcentre">
     <th mat-header-cell *matHeaderCellDef> Testcentre</th>
-    <td mat-cell *matCellDef="let officer"> {{officer.testcentre}} </td>
+    <td mat-cell *matCellDef="let officer"> {{officer.centreName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="position">
@@ -37,9 +37,9 @@
 
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Actions</th>
-    <td mat-cell *matCellDef="let row">
-      <button mat-icon-button> <mat-icon>edit</mat-icon></button>
-      <button mat-icon-button> <mat-icon>delete</mat-icon></button>
+    <td mat-cell *matCellDef="let officer">
+      <button mat-icon-button [routerLink]= "['/editOff', officer.id]"> <mat-icon>edit</mat-icon></button>
+      <button mat-icon-button (click)="onDelete(officer.id)"> <mat-icon>delete</mat-icon></button>
     </td>
   </ng-container>
 
