--- a/src/app/record-officer-list/record-officer-list.component.html
+++ b/src/app/record-officer-list/record-officer-list.component.html
@@ -12,28 +12,27 @@
     <td mat-cell *matCellDef="let officer"> {{officer.centreName}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> Position </th>
-    <td mat-cell *matCellDef="let officer"> {{officer.position}} </td>
+  <ng-container matColumnDef="password">
+    <th mat-header-cell *matHeaderCellDef> Password </th>
+    <td mat-cell *matCellDef="let  officer"> <input type="password" matInput readonly value="{{officer.password}}"> </td>
   </ng-container>
 
+  <ng-container matColumnDef="fullname">
+    <th mat-header-cell *matHeaderCellDef> Fullname </th>
+    <td mat-cell *matCellDef="let  officer"> {{officer.fullname}} </td>
+  </ng-container>
 
   <ng-container matColumnDef="username">
     <th mat-header-cell *matHeaderCellDef> Username </th>
     <td mat-cell *matCellDef="let officer"> {{officer.username}} </td>
   </ng-container>
 
-
-  <ng-container matColumnDef="password">
-    <th mat-header-cell *matHeaderCellDef> Password </th>
-    <td mat-cell *matCellDef="let  officer"> {{officer.password}} </td>
+  <ng-container matColumnDef="position">
+    <th mat-header-cell *matHeaderCellDef> Position </th>
+    <td mat-cell *matCellDef="let officer"> {{officer.position}} </td>
   </ng-container>
 
 
-  <ng-container matColumnDef="fullname">
-    <th mat-header-cell *matHeaderCellDef> Fullname </th>
-    <td mat-cell *matCellDef="let  officer"> {{officer.fullname}} </td>
-  </ng-container>
 
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Actions</th>
